# open-metrics-multi-tenancy-kit

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  e2e_test.py
.github/workflows/: push.yml
config/: prom-docker-for-mac.yml  prometheus.proto
config/cortex/: single-process-config-blocks-local.yaml
config/cortex/grafana/datasources/: datasource.yml
config/crd/: open-metrics-ingestion-tenant.yaml  open-metrics-tenant-rule.yaml  tenant1.yaml  tenant2.yaml  zero-tenant.yaml
config/crd/informer/: open-metrics-tenant-rule.yaml
config/crd/proxy/: open-metrics-ingestion-tenant.yaml  tenant1.yaml  tenant2.yaml  zero-tenant.yaml
config/example-resources/: tenant1.yaml  zero-tenant.yaml
informer/: Cargo.toml  Dockerfile  README.md
informer/src/: main.rs
informer/src/crud/: crud.rs
informer/src/rules/: rules.rs
informer/src/tracker/: tracker.rs
informer/src/updater/: updater.rs
kube-metrics-multi-tenancy-lib/: Cargo.toml  README.md
kube-metrics-multi-tenancy-lib/src/: lib.rs
ops/: Dockerfile  test.py
proxy/: Cargo.toml  Dockerfile  README.md  build.rs
proxy/src/: main.rs
proxy/src/controller/: controller.rs
proxy/src/forward/: forward.rs
proxy/src/ingestiontenant/: ingestiontenant.rs  mod.rs
proxy/src/metrics/: metrics.rs
proxy/src/proto/: .gitignore
proxy/src/tracker/: controller.rs
src/: main.rs
src/forward/: forward.rs
src/metrics/: metrics.rs
src/proto/: mod.rs
