[package]
name = "kube_metrics_multi_tenancy_lib"
version = "0.1.0"
authors = ["Very Good Security, Inc <dev@verygoodsecurity.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]

[lib]
name = "kube_metrics_mutli_tenancy_lib"
path = "src/lib.rs"

[dependencies]
log = { version = "0.4" }
kube = { version = "0.51.0", features = ["derive"] }
kube-derive = "0.51.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
schemars = { version = "0.8.0", features = ["chrono"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
serde_derive = "1.0.125"
