[package]
name = "open-metrics-multi-tenancy-proxy"
version = "0.1.0"
authors = ["Very Good Security, Inc <dev@verygoodsecurity.com>"]
edition = "2018"
include = ["src/**/*", "src/proto/**/*", "Cargo.toml"]
build = "build.rs"

[dependencies]
argh = "0.1.3"
bytes = "1.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.2"
futures = "0.3"
kube = { version = "0.51.0", features = ["derive"] }
kube-derive = "0.51.0"
kube-runtime = "0.51.0"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
log = "0.4"
once_cell = "1.7.2"
kube_metrics_multi_tenancy_lib = { path = "../kube-metrics-multi-tenancy-lib" }
prometheus = "0.11.0"
protobuf = { version = "2", features = ["with-bytes"] }
reqwest = "0.11.2"
schemars = { version = "0.8.0", features = ["chrono"] }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
snap = "1"
hyper = "0.14"
serde_derive = "1.0.125"
spin = "0.7.1"
tokio = { version = "1.0", features = ["full"] }
tokio-compat = "0.1.6"
tokio-compat-02 = "0.2"
warp = "0.3.0"

[build-dependencies]
protoc-rust = "2.0"

[dev-dependencies]
env_logger = "0.8.2"
futures = "0.3.8"
http = "0.2.2"
mockito = "0.30.0"
tempfile = "3.1.0"
tokio = { version = "1.0.1", features = ["full"] }
tokio-test = "0.4.0"
tower-test = "0.4.0"
serial_test = "0.4.0"
